crates/service/tests/references/snapshots/features__references__block__on_clause.snap
---
source: crates/service/tests/references/block.rs
expression: response
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 6,
        "character": 5
      },
      "end": {
        "line": 6,
        "character": 10
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 7,
        "character": 22
      },
      "end": {
        "line": 7,
        "character": 23
      }
    }
  }
]
