crates/service/tests/references/snapshots/features__references__block__try_table.snap
---
source: crates/service/tests/references/block.rs
expression: def
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 14
      },
      "end": {
        "line": 3,
        "character": 16
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 9
      },
      "end": {
        "line": 4,
        "character": 10
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 8
      },
      "end": {
        "line": 5,
        "character": 10
      }
    }
  }
]
